Swagger documentation modified.
