# src/controllers/users.controller.js
@@ -97,7 +97,8 @@ const deleteUser = async (req, res) => {
     try {
         const result = await User.destroy({ where: { id } });
         
-        if (result === 1 ) return res.status(200).json({message: `The user ${id} was succesfully removed.`});
+        //if (result === 1 ) return res.status(200).json({message: `The user ${id} was succesfully removed.`});
+        if (result === 1 ) return res.send(204);
         if (result === 0 ) return res.status(404).json({message: `The user ${id} does not exist.`});
     
     } catch (error) {
